--- a/js/index.html
+++ b/js/index.html
@@ -11,12 +11,34 @@
             box-sizing: border-box;
         }
 
+        button {
+          color: white;
+          margin: 10px;
+          padding: 5px;
+          background-color: rgba(255, 255, 255, 0.5);
+          border-style: none;
+          border: 1px solid white;
+        }
+
+        button:hover {
+          color: rgba(255, 255, 255, 0.7);
+          background-color: rgba(255, 255, 255, 0.3);
+          border: 1px solid rgb(202, 225, 255);
+        }
+
         /* Create two equal columns that floats next to each other */
         .column {
             float: left;
             width: 50%;
             padding: 10px;
             height: 700px; /* Should be removed. Only for demonstration */
+        }
+        #overlay {
+            position: absolute;
+            width: 400px;
+            height: 300px;
+            background-color: rgba(0, 0, 0, 0.4);
+            border: 1px solid white;
         }
 
         /* Clear floats after the columns */
@@ -35,14 +57,30 @@
     </head>
 
     <body>
-        <div class="row">
+        <div class="row" id="mainPanel">
             <div class="column" id="hexagonDiv">
             </div>
             <div class="column" style="background-color:aquamarine">
             </div>
         </div>
 
+        <!-- 
+        <button onclick="myFunction1()">Overlay</button>
+        <button onclick="myFunction2()">Remove Overlay</button>
+        -->
+
         <script>
+
+            function removeEffectWindow() {
+                // document.getElementById("overlay").setAttribute("style", "");                
+                var element = document.getElementById("overlay")
+                element.outerHTML = "";
+                element.innerHTML = "";
+                delete element;
+                // document.getElementById("demo").innerHTML = "Hello World";
+            }
+
+
 
             var hexagon_numbers = 40;
             var col_numbers = 7;
@@ -51,6 +89,7 @@
 
             var x_anchor = 40;
             var y_anchor = 40;
+
 
             // ----------------------------------------------------------------------------- //
             //                         Create Hexagon Visualization                          //
@@ -77,13 +116,15 @@
 
             var k = 0;
 
+
+            // Create data for plotting the hexagons:
             for (var i = 0; i < row_numbers; i++) {
                 for (var j = 0; j < col_numbers; j++) {
                     if (k === hexagon_numbers) { break; }
                     
                     hexagon_centers.push( { 
                         "x": x_anchor + (1 + j * 2) * outer_radius, 
-                        "y": y_anchor + (1 + i * 2) * outer_radius,
+                        "y": y_anchor + (1 + i * 2) * inner_radius + inner_radius / 2 * (j % 2),
                         "fill": "rgba(" + 
                             Math.trunc(red_from + (red_to - red_from) / hexagon_numbers * (k + 1)) + "," + 
                             Math.trunc(blue_from + (blue_to - blue_from) / hexagon_numbers * (k + 1)) + "," + 
@@ -130,7 +171,30 @@
                     hover_info = "my fancy hexagons",
                     delay = 70 * i
                 );
+
+                svg.append("text")
+                    .text(i + 1)
+                    .attr("x", 0)
+                    .attr("y", 0)
+                    .style("fill", "white")
+                    .style("font-family", "Century Gothic")
+                    .style("font-size", Math.trunc(hexagon_centers[i]["radius"]) + "px")
+                    .style("text-anchor", "middle")
+                    .transition()
+                    .duration(transition_duration)
+                    .attr("x", hexagon_centers[i]["x"])
+                    .attr("y", hexagon_centers[i]["y"] + Math.trunc(hexagon_centers[i]["radius"])/3)
+                    .delay(70 * i);
             }
+
+
+            // ----------------------------------------------------------------------------- //
+            //                                Create Line Graph                              //
+            // ----------------------------------------------------------------------------- //
+
+
+
+
         </script>
     </body>
 </html>
