update presentation + js files

--- a/js/index.html
+++ b/js/index.html
@@ -20,14 +20,14 @@
           color: white;
           margin: 10px;
           padding: 5px;
-          background-color: rgba(255, 255, 255, 0.5);
+          background-color: rgba(255, 255, 255, 0.2);
           border-style: none;
           border: 1px solid white;
         }
 
         button:hover {
-          color: rgba(255, 255, 255, 0.7);
-          background-color: rgba(255, 255, 255, 0.3);
+          color: rgba(0, 0, 0, 0.7);
+          background-color: rgba(255, 255, 255, 0.5);
           border: 1px solid rgb(202, 225, 255);
         }
 
@@ -40,9 +40,9 @@
         }
         #overlay {
             position: absolute;
-            width: 400px;
-            height: 300px;
-            background-color: rgba(0, 0, 0, 0.4);
+            width: 600px;
+            height: 400px;
+            background-color: rgba(0, 0, 0, 0.9);
             border: 1px solid white;
         }
 
@@ -57,16 +57,25 @@
         .inbag_line {
           fill: none;
           stroke: rgb(72, 209, 204);
-          stroke-width: 3px;
+          stroke-width: 1px;
         }
-
+        .inbag_line_sel {
+          fill: none;
+          stroke: rgb(72, 209, 204);
+          stroke-width: 4px;
+        }
         .inbag_area {
           fill: rgba(72, 209, 204, 0.2);
         }
         .oob_line {
           fill: none;
           stroke: rgb(255, 180, 50);
-          stroke-width: 3px;
+          stroke-width: 1px;
+        }
+        .oob_line_sel {
+          fill: none;
+          stroke: rgb(255, 180, 50);
+          stroke-width: 4px;
         }
         .oob_area {
           fill: rgba(255, 180, 50, 0.2);
@@ -104,6 +113,11 @@
         	fill: none;
         	stroke: none;
         }
+        .effect_line {
+          fill: none;
+          stroke: rgb(255, 255, 255);
+          stroke-width: 4px;
+        }
     </style>
 
     <head>
@@ -115,7 +129,7 @@
     </head>
 
     <body>
-        <h1>Visualize a Compboost Object</h1>
+        <h1>Visualizing Compboost</h1>
         <div class="row" id="mainPanel">
             <div class="column" id="hexagonDiv">
             </div>
@@ -130,6 +144,7 @@
 
         <script>
 
+            // Function to remove the window containing the effect by click on hexagon
             function removeEffectWindow() {
                 // document.getElementById("overlay").setAttribute("style", "");                
                 var element = document.getElementById("overlay")
@@ -142,7 +157,7 @@
 
 
             var hexagon_numbers = 56;
-            var col_numbers = 7;
+            var col_numbers = 8;
 
             var row_numbers = Math.trunc(hexagon_numbers / col_numbers) + 1;
 
@@ -172,6 +187,7 @@
             var outer_radius = div_width / (2 * col_numbers) * (1 - 1 / col_numbers);
             var inner_radius = outer_radius * (0.8);
             var hexagon_centers = [];
+            var hex_rev = [];
 
             var k = 0;
 
@@ -183,68 +199,106 @@
                     
                     hexagon_centers.push( { 
                         "x": x_anchor + (1 + j * 2) * outer_radius, 
-                        "y": 40 + y_anchor + (1 + i * 2) * inner_radius + inner_radius / 2 * (j % 2),
+                        "y": y_anchor + (1 + i * 2) * inner_radius + inner_radius / 2 * (j % 2),
                         "fill": "rgba(" + 
                             Math.trunc(red_from + (red_to - red_from) / hexagon_numbers * (k + 1)) + "," + 
                             Math.trunc(blue_from + (blue_to - blue_from) / hexagon_numbers * (k + 1)) + "," + 
                             Math.trunc(green_from + (green_to - green_from) / hexagon_numbers * (k + 1)) + ",",
-                        "radius": inner_radius - 0.5 * k / hexagon_numbers * inner_radius
+                        "radius": inner_radius - 0.5 * k / hexagon_numbers * inner_radius,
+                        "x_init": 0,
+                        "y_init": 0
                     } );
 
                     k = k + 1;
                 }
             }
-            console.log(hexagon_centers);
+
+             var k = 0;
+
+
+            // Create data for plotting the hexagons:
+            for (var i = 0; i < row_numbers; i++) {
+                for (var j = 0; j < col_numbers; j++) {
+                    if (k === hexagon_numbers) { break; }
+                    
+                    hex_rev.push( { 
+                        "x_init": x_anchor + (1 + j * 2) * outer_radius, 
+                        "y_init": y_anchor + (1 + i * 2) * inner_radius + inner_radius / 2 * (j % 2),
+                        "fill": "rgba(" + 
+                            Math.trunc(red_from + (red_to - red_from) / hexagon_numbers * (k + 1)) + "," + 
+                            Math.trunc(blue_from + (blue_to - blue_from) / hexagon_numbers * (k + 1)) + "," + 
+                            Math.trunc(green_from + (green_to - green_from) / hexagon_numbers * (k + 1)) + ",",
+                        "radius": inner_radius - 0.5 * k / hexagon_numbers * inner_radius,
+                        "x": 0,
+                        "y": 0
+                    } );
+
+                    k = k + 1;
+                }
+            }
+            // console.log(hexagon_centers);
 
             var svg = d3
                 .select("#hexagonDiv")
-                .append("svg")
-                .attr("width", div_width)
-                .attr("height", div_height);
-
-            // Append header for the hexagons:
-            svg.append("text")
-                .text("Selected Base-Learner:")
-                .attr("x", x_anchor)
-                .attr("y", y_anchor)
-                .style("fill", "white")
-                .style("font-family", "Century Gothic")
-                .style("font-size", "36px")
-                .style("text-anchor", "start");
-
-            // Append first hexagon:
-            for (i = 0; i < hexagon_numbers; i++) { 
-
-                hexagon (
-                    svg    = svg,
-                    fill   = hexagon_centers[i]["fill"] + "0.7)", 
-                    stroke = "black", 
-                    x      = hexagon_centers[i]["x"], 
-                    y      = hexagon_centers[i]["y"], 
-                    r      = hexagon_centers[i]["radius"], 
-                    fill_hover   = hexagon_centers[i]["fill"] + "1)", 
-                    stroke_hover = "black", 
-                    x_init       = 0,
-                    y_init       = 0,
-                    transition_duration = 1000,
-                    hover_info = "my fancy hexagons",
-                    delay = 70 * i
-                );
-
-                svg.append("text")
-                    .text(i + 1)
-                    .attr("x", 0)
-                    .attr("y", 0)
-                    .style("fill", "white")
+                .append("text")
+                    .text("Selected Base-Learner:")
+                    .style("color", "white")
+                    .style("margin-left", x_anchor + "px")
+                    .style("margin-top", y_anchor + "px")
                     .style("font-family", "Century Gothic")
-                    .style("font-size", Math.trunc(hexagon_centers[i]["radius"]) + "px")
-                    .style("text-anchor", "middle")
-                    .transition()
-                    .duration(transition_duration)
-                    .attr("x", hexagon_centers[i]["x"])
-                    .attr("y", hexagon_centers[i]["y"] + Math.trunc(hexagon_centers[i]["radius"])/3)
-                    .delay(70 * i);
+                    .style("font-size", "36px")
+                    .style("text-anchor", "start")
+                .append("svg")
+                    .attr("width", div_width)
+                    .attr("height", div_height)
+                    .attr("id", "myhexs");
+
+            function drawHexagons (svg, hexagon_centers, transition_duration = 1000) {
+
+                if (document.getElementById("#myhexs")) {
+                    svg.selectAll("myhexs").remove();
+                }           
+
+                //svg = svg.attr("id", myhexs);
+
+                // Append first hexagon:
+                for (i = 0; i < hexagon_centers.length; i++) { 
+
+                    hexagon (
+                        svg    = svg,
+                        fill   = hexagon_centers[i]["fill"] + "0.7)", 
+                        stroke = "black", 
+                        x      = hexagon_centers[i]["x"], 
+                        y      = hexagon_centers[i]["y"], 
+                        r      = hexagon_centers[i]["radius"], 
+                        fill_hover   = hexagon_centers[i]["fill"] + "1)", 
+                        stroke_hover = "black", 
+                        x_init       = hexagon_centers[i]["x_init"],
+                        y_init       = hexagon_centers[i]["y_init"],
+                        r_init       = hexagon_centers[i]["radius"],
+                        transition_duration = transition_duration,
+                        hover_info = "my fancy hexagons",
+                        delay = 70 * i
+                    );
+
+                    svg.append("text")
+                        .text(i + 1)
+                        .attr("x", hexagon_centers[i]["x_init"])
+                        .attr("y", hexagon_centers[i]["y_init"])
+                        .style("fill", "white")
+                        .style("font-family", "Century Gothic")
+                        .style("font-size", Math.trunc(hexagon_centers[i]["radius"]) + "px")
+                        .style("text-anchor", "middle")
+                        .transition()
+                        .duration(transition_duration)
+                        .attr("x", hexagon_centers[i]["x"])
+                        .attr("y", hexagon_centers[i]["y"] + Math.trunc(hexagon_centers[i]["radius"])/3)
+                        .delay(70 * i);
+                }
             }
+
+            drawHexagons(svg = svg, hexagon_centers = hexagon_centers);    
+            drawHexagons(svg = svg, hexagon_centers = hex_rev);     
 
 
             // ----------------------------------------------------------------------------- //
